[package]
name = "attyvo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A daemon-based terminal session manager for persistent command execution"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
daemonize-me = "2.0.2"
interprocess = "2.2.3"
libc = "0.2.174"
pty-process = "0.5.3"
